--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,19 @@
+body{
+  background: url(../images/background2.jpeg);
+  background-position: center;
+
+}
+h1{
+  text-align: center;
+  font-size: 55px;
+  font-family: 'Monoton', cursive;
+  color: gray;
+}
+
+
 .button{
-  background-color: rgb(241, 161, 208);
+
+  background-color: black;
   border-radius: 20px;
   margin: none;
   color: white;
