--- a/css/styles2.css
+++ b/css/styles2.css
@@ -2,11 +2,18 @@ body{
   background: black;
   color: white;
   text-align: center;
-  width: 80%;
+  width: %;
 }
 .player{
   display: inline-block;
 }
 img{
-  width: 80%
+  width: 100%;
+  /* height:20%; */
+  display: inl;
+}
+.play-area{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
