--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,29 @@
+.loader{
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+
+
+}
+
+.loader img{
+  padding-top: 45vh;
+  position: absolute;
+  left: 0px;
+  animation: walk 2s linear infinite;
+}
+@keyframes walk{
+  0% {left:0%; top:0%}
+  25%{left:25%}
+  50%{left:50%; top:20%}
+  75%{left:75%;}
+  100%{left:100%; top:0%}
+}
+
 body{
   background: url(../images/background2.jpeg);
   background-position: center;
